--- a/index.html
+++ b/index.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>HTML5 Image uploader & Color picker</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="css/style.css" rel="stylesheet" media="screen">
-  </head>
-  <body>
-    <a href="https://github.com/Onra/ooColorPicker" target="_blank">
-      <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub" />
-    </a>
+<head>
+  <title>HTML5 Image Uploader & Color Picker</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link href="style.css" rel="stylesheet" media="screen">
+</head>
+<body>
+  <div class="container">
+    <h1>Image Uploader & Color Picker!</h1>
+    <p class="lead">Upload an image and then simply pick a color on it. Click to add the hex to your Color History.</p>
 
-    <div class="container">
-      <div class="hero-unit pagination-centered">
-        <h2>Image uploader & Color Picker !</h2>
-        <p>
-          Upload an image and then simply pick a color on it.
-        </p>
-        <div class="alert alert-error fade in hide" id="not-an-image">
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-          <strong>Error!</strong> The title said <strong>IMAGE</strong> uploader !...
-        </div>
-
-        <canvas id="canvas" width="0" height="0" class="canvas hidden"></canvas>
-
-        <p>
-          <button type="button" class="btn btn-primary btn-upload" data-loading-text="Uploading...">Upload image</button>
-        </p>
-        <h3 id="rgb-color" class="after-image-uploaded hidden">Pick a color !</h3>
-        <h3 id="hex-color" class="after-image-uploaded hidden"></h3>
-        <div class="color-sample after-image-uploaded hidden"></div>
-        <input type="file" id="imageInput" name="imageInput" class="hidden" />
-      </div>
+    <div class="alert alert-error fade in hide" id="not-an-image">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <strong>Error!</strong> The title said <strong>IMAGE</strong> uploader !...
     </div>
 
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
-  </body>
+    <div class="row">
+      <div class="col">
+        <button type="button" class="btn btn-primary btn-upload" data-loading-text="Uploading...">Upload image</button>
+        <canvas id="canvas" width="0" height="0" class="canvas hidden"></canvas>
+      </div>
+      <div class="col col-md-4 col-lg-4">
+        <div class="card">
+          <div class="color-sample"></div>
+          <div class="card-body">
+            <p>RGB Color: <span id="rgb-color"></span></p>
+            <p>Hex Color: <span id="hex-color"></span></p>
+            <input type="file" id="imageInput" name="imageInput" class="hidden" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Color History</h5>
+            <span id="colorHistory"></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
+</body>
 </html>
